# CrystalFlow

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
conf/: default.yaml
conf/data/: Li-HCurve_sym.yaml  alex_20_eform.yaml  alex_20_ehull.yaml  alex_ehull.yaml  alex_ene_by_hull.yaml  alex_mp_20_ehull.yaml  calypso.yaml  calypso_60.yaml  calypso_60_sym.yaml  mp_20.yaml  mp_20_chgnet.yaml  mp_20_ehull.yaml  mp_20_sym.yaml  mpts_52.yaml  mpts_52_sym.yaml
conf/logging/: default.yaml
conf/model/: diffcsppp_diffusion.yaml  diffcsppp_diffusion_w_type.yaml  flow.yaml  flow_polar.yaml  flow_polar_w_type.yaml  flow_w_type.yaml
conf/model/conditions/: default.yaml
conf/model/decoder/: crysformer.yaml  cspnet.yaml  cspnet_polar.yaml  diffcsppp_cspnet.yaml  gemnet.yaml  graphgps.yaml
conf/optim/: default.yaml
conf/optim/lr_scheduler/: CosineAnnealingWarmRestarts.yaml  ReduceLROnPlateau.yaml
conf/optim/optimizer/: Adam.yaml
conf/train/: default.yaml
crystalflow/common/: data_utils.py  eval_utils.py  globals.py  model_utils.py  train_utils.py
crystalflow/conf/: default.yaml
crystalflow/conf/data/: default.yaml  mp_20.yaml
crystalflow/conf/pl_model/: default.yaml
crystalflow/conf/trainer/: default.yaml
crystalflow/data/: datamodule.py  dataset.py
crystalflow/entrypoints/: compute_metrics.py  data_preprocess.py  extract.py  infer.py  train_scratch.py
crystalflow/models/: flow.py  flow_new.py  frac_coords_probpath.py  lattice_probpath.py  pl_model.py  property_embeddings.py  type_model.py  types_probpath.py
crystalflow/models/probpath/: types_probpath.py
crystalflow/models/utils/: activations.py  basis.py  blocks.py
diffcsp/: finetune.py  run.py
diffcsp/common/: data_utils.py  ocp_graph_utils.py  utils.py
diffcsp/pl_data/: datamodule.py  dataset.py
diffcsp/pl_modules/: conditioning.py  crysformer.py  cspnet.py  diffcsppp_cspnet.py  diffcsppp_diffusion.py  diffcsppp_diffusion_w_type.py  diffusion.py  diffusion_w_type.py  energy_model.py  flow.py  flow_cls_guide.py  flow_w_type.py  gemnet.py  gnn.py  graphgps.py  hungarian.py  lattice_utils.py  model.py  ode_solvers.py  symmetrize.py  time_scheduler.py  type_module.py
scripts/: calypso_run_mlp.py  compute_metrics.py  compute_metrics_rec.py  eval_utils.py  evaluate.py  evaluate_ode.py  extract_gen.py  generation.py  prepare_dataset.py  prepare_mp_default_relax.py  readout_opt.py  sample.py  sample_ode.py
(+35 files in other folders)
