[tool.setuptools.packages.find]
where = ["."]
include = ["crystalflow"]

[project]
name = "crystalflow"
version = "0.1.0"
description = "CrystalFlow"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.5,<2.6",
    "torch-geometric>=2.6,<2.7",
    "pyg_lib; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch_scatter; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch_sparse; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch_cluster; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch_spline_conv; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "lightning>=2.5",
    "finetuning-scheduler>=2.5.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.1",
    "wandb>=0.19.8",
    "rich>=13.9.4",
    "p-tqdm>=1.4.2",
    "pymatgen>=2025.3.10",
    "pyxtal>=1.0.7",
    "smact>=3.0.2",
    "matminer>=0.9.3",
    "einops>=0.8.1",
    "flow-matching>=1.0.10",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
matplotlib = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "scienceplots>=2.1.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
pyg_lib = {url = "https://data.pyg.org/whl/torch-2.5.0%2Bcu124/pyg_lib-0.4.0%2Bpt25cu124-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"}
torch_scatter = {url = "https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_scatter-2.1.2%2Bpt25cu124-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"}
torch_sparse = {url = "https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_sparse-0.6.18%2Bpt25cu124-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"}
torch_cluster = {url = "https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_cluster-1.6.3%2Bpt25cu124-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"}
torch_spline_conv = {url = "https://data.pyg.org/whl/torch-2.5.0%2Bcu124/torch_spline_conv-1.2.2%2Bpt25cu124-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"}

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
